--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div id="scrollable" class="scrollable">
         <nav class="navigation">
           <a href="/">
-            <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
+            <img src="./assets/logo-white.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
           <div class="navigation__links">
             <a href="./aboutus.html" class="navigation__link">About Us</a><a href="./careers.html"
@@ -63,24 +63,38 @@
 
               <div class="carousel">
                 <div class="slides">
-                  
-                  <h1 class="home__title slide" data-animation="paragraph">
-                    At <span>Five Eyes</span>, we aim to adapt and improve the way
-                    you and your business is protected against data breaches with
-                    the latest cyber requirements.
-                  </h1>
+                  <!-- 1 -->
+                  <div class=" slide">
+                    <h1 class="home__title" data-animation="paragraph">
+                      Welcome to <span>Five Eyes Consulting</span>
+                    </h1>
+                    <p class="home__para" data-animation="paragraph">
+                      Australia’s trusted consultancy for Information Security across the Five Eyes Nations
+                    </p>
+                    <a href="/aboutus.html" data-animation="paragraph" class="home__link">Learn more</a>
+                  </div>
 
-                  <h1 class="home__title slide" data-animation="paragraph">
-                    At <span>Five Eyes</span>, we aim to adapt and improve the way
-                    you and your business is protected against data breaches with
-                    the latest cyber requirements.
-                  </h1>
+                  <!-- 2 -->
+                  <div class=" slide">
+                    <h1 class="home__title" data-animation="paragraph">
+                      Build a <span>Career</span> with Us / Join our team
+                    </h1>
+                    <p class="home__para" data-animation="paragraph">
+                      Five Eyes Consulting is an organisation built on the pillars of community and culture. We have created an atmosphere where self-development and innovation are encouraged, and where your career aspirations will be supported.
+                    </p>
+                    <a href="/aboutus.html" data-animation="paragraph" class="home__link">Learn more</a>
+                  </div>
 
-                  <h1 class="home__title slide" data-animation="paragraph">
-                    At <span>Five Eyes</span>, we aim to adapt and improve the way
-                    you and your business is protected against data breaches with
-                    the latest cyber requirements.
-                  </h1>
+                  <!-- 3 -->
+                  <div class=" slide">
+                    <h1 class="home__title" data-animation="paragraph">
+                      What Ever the <span>Latest Article</span> is
+                    </h1>
+                    <p class="home__para" data-animation="paragraph">
+                      One sentence describing the article
+                    </p>
+                    <a href="/aboutus.html" data-animation="paragraph" class="home__link">Learn more</a>
+                  </div>
 
                    </div>
                 <div class="controls">
@@ -97,7 +111,7 @@
           </section>
 
           <script>
-            const delay = 3000; //ms
+            const delay = 5000; //ms
 
             const slides = document.querySelector(".slides");
             const slidesCount = slides.childElementCount;
