--- a/aboutus.html
+++ b/aboutus.html
@@ -47,19 +47,48 @@
 
         <div class="content" data-template="about">
           <section class="about">
-            <h1 class="about__title" data-animation="paragraph">
-              <div>a leading Australian-</div>
-              <div>based sovereign</div>
-              <div>consultancy</div>
-              <div>
-                <span>for cyber security</span>
-              </div>
-            </h1>
+
+            <div>
+              <h1 class="about__title" data-animation="paragraph">
+                About Us
+              </h1>
+
+              <p class="about__para" data-animation="paragraph">Established in 2020, Five Eyes Consulting is a fast-growing Information Security
+                and Technology consulting firm based in Australia. With a workforce that has over 20 years of experience
+                specialising in Cyber Security, Information Technology and Programme and Project Management, we partner
+                with public and private sector organisations of all sizes to deliver secure and quality solutions and
+                outcomes.</p>
+
+                <p class="about__para" data-animation="paragraph">With people, technology and innovation at the forefront, we have created an atmosphere where self-development and creativity are supported and encouraged, enabling us to deliver quality outcomes for not only our communities but the Five Eyes Nations. By collaborating with our experienced team we help you utilise the right technology empowering your response to changing environments and threats.
+                </p>
+
+            </div>
 
             <svg class="about__arrow" viewBox="0 0 16 35" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M7.29289 34.7071C7.68342 35.0976 8.31658 35.0976 8.70711 34.7071L15.0711 28.3431C15.4616 27.9526 15.4616 27.3195 15.0711 26.9289C14.6805 26.5384 14.0474 26.5384 13.6569 26.9289L8 32.5858L2.34315 26.9289C1.95262 26.5384 1.31946 26.5384 0.928932 26.9289C0.538408 27.3195 0.538408 27.9526 0.928932 28.3431L7.29289 34.7071ZM7 0V34H9V0H7Z" />
             </svg>
+          </section>
+
+          <section class="values">
+
+            <div class="values-row">
+              <div class="value-item">
+                <h2>Our Purpose <img src="/assets/about_icon1.svg" alt="img"></h2>
+                <p>Whether we are advising, delivering, or creating, our purpose is to help our communities solve their most complex information security challenges through our people, technology, and innovation.</p>
+              </div>
+
+              <div class="value-item">
+                <h2>Our Vision <img src="/assets/about_icon2.svg" alt="img"></h2>
+                <p>We aim to be the standard of excellence for Information Security and employer choice for security professionals.</p>
+              </div>
+
+              <div class="value-item">
+                <h2>Our Mission <img src="/assets/about_icon3.svg" alt="img"></h2>
+                <p>We create information security solutions that are secured by design and meet our clients desired outcomes.</p>
+              </div>
+            </div>
+
           </section>
 
           <section class="background">
