--- a/careers.html
+++ b/careers.html
@@ -37,24 +37,25 @@
           <a href="/">
             <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
-          <div class="navigation__links">
-            <a href="./aboutus.html" class="navigation__link">About Us</a><a href="./careers.html"
-              class="navigation__link">Careers</a><a href="./contactus.html" class="navigation__link">Contact Us</a><a
-              href="./news.html" class="navigation__link">News</a>
-            <a href="mailto:enquiries@fiveeyes.com.au" class="navigation__button">Get in touch</a>
-          </div>
+            <div class="navigation__links">
+              <a href="./aboutus.html" class="navigation__link">About Us</a>
+              <a href="./careers.html" class="navigation__link">Careers</a>
+              <a href="./contactus.html" class="navigation__link">Contact Us</a>
+              <a href="./news.html" class="navigation__link">News</a>
+              <a href="./services.html" class="navigation__link">Services</a>
+            </div>
         </nav>
 
         <div class="content" data-template="careers">
+
           <section class="careers">
             <div class="careers__info">
               <h1 class="careers__info__title" data-animation="title">
-                Careers
+                Join Our Team
               </h1>
 
               <p class="careers__info__label" data-animation="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore.
+                Five Eyes Consulting was built on the pillars of community and culture. We have created an atmosphere where self development and innovation are encouraged and where the will to advance one’s career is met with reward and support.
               </p>
 
               <canvas class="careers__canvas"></canvas>
