--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
             <img src="./assets/logo-white.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
           <div class="navigation__links">
-            <a href="./aboutus.html" class="navigation__link">About Us</a><a href="./careers.html"
-              class="navigation__link">Careers</a><a href="./contactus.html" class="navigation__link">Contact Us</a><a
-              href="./news.html" class="navigation__link">News</a>
+            <a href="./aboutus.html" class="navigation__link">About Us</a>
+            <a href="./careers.html" class="navigation__link">Careers</a>
+            <a href="./contactus.html" class="navigation__link">Contact Us</a>
+            <a href="./news.html" class="navigation__link">News</a>
             <a href="./services.html" class="navigation__link">Services</a>
-            <a href="mailto:enquiries@fiveeyes.com.au" class="navigation__button">Get in touch</a>
+            <!-- <a href="mailto:enquiries@fiveeyes.com.au" class="navigation__button">Get in touch</a> -->
           </div>
         </nav>
 
