--- a/services.html
+++ b/services.html
@@ -37,12 +37,13 @@
           <a href="/">
             <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
-          <div class="navigation__links">
-            <a href="./aboutus.html" class="navigation__link">About Us</a><a href="./careers.html"
-              class="navigation__link">Careers</a><a href="./contactus.html" class="navigation__link">Contact Us</a><a
-              href="./news.html" class="navigation__link">News</a>
-            <a href="mailto:enquiries@fiveeyes.com.au" class="navigation__button">Get in touch</a>
-          </div>
+            <div class="navigation__links">
+              <a href="./aboutus.html" class="navigation__link">About Us</a>
+              <a href="./careers.html" class="navigation__link">Careers</a>
+              <a href="./contactus.html" class="navigation__link">Contact Us</a>
+              <a href="./news.html" class="navigation__link">News</a>
+              <a href="./services.html" class="navigation__link">Services</a>
+            </div>
         </nav>
 
         <div class="content" data-template="services">
