--- a/careers.html
+++ b/careers.html
@@ -63,7 +63,7 @@
               <!-- <canvas class="contacts__canvas"></canvas> -->
             </div>
 
-            <div class="careers__grid">
+            <!-- <div class="careers__grid">
               <a href="mailto:enquiries@fiveeyes.com.au" class="careers__grid__item">
                 <div class="careers__grid__item__info">
                   <div class="careers__grid__item__info__headers">
@@ -136,33 +136,106 @@
 
                 <span class="careers__grid__item__line"></span>
               </a>
+            </div> -->
+
+            <!-- <div class="careers__table">
+              <div class="careers__table__item">
+                <p class="careers__table__item__title" data-animation="paragraph">
+                  Deep commitment to the cultivation of each team member
+                </p>
+              </div>
+
+              <div class="careers__table__item">
+                <p class="careers__table__item__title" data-animation="paragraph">
+                  Deep commitment to the cultivation of each team member
+                </p>
+              </div>
+
+              <div class="careers__table__item">
+                <p class="careers__table__item__title" data-animation="paragraph">
+                  Deep commitment to the cultivation of each team member
+                </p>
+              </div>
+
+              <div class="careers__table__item">
+                <p class="careers__table__item__title" data-animation="paragraph">
+                  Deep commitment to the cultivation of each team member
+                </p>
+              </div>
+            </div> -->
+          </section>
+
+          <section class="background" style="padding-bottom: 0;">
+            <h3 class="background__title" data-animation="paragraph">
+              Our Values <img src="./assets/about_icon4.svg" alt="icon" style="width: 25px;">
+            </h3>
+
+            <h3 class="background__label" data-animation="paragraph">
+              Five Eyes Consulting is an organisation built on the pillars of community and culture. We have created an atmosphere where self-development and innovation are encouraged, and where your career aspirations will be supported.
+            </h3>
+
+
+            <div class="values-row values-row2">
+              <div class="value-item">
+                <h2>DEDICATED</h2>
+                <p>We are reliable and committed to supporting our team and clients.</p>
+              </div>
+
+              <div class="value-item">
+                <h2>PASSIONATE</h2>
+                <p>We are passionate about achieving our personal and client goals.</p>
+              </div>
+
+              <div class="value-item">
+                <h2>CURIOUS</h2>
+                <p>We innovate and never stop learning from experiences and others.</p>
+              </div>
+
+              <div class="value-item">
+                <h2>INCLUSIVE</h2>
+                <p>We respect each other and support each other to grow professionally and personally.</p>
+              </div>
+
+              <div class="value-item">
+                <h2>COLLABORATIVE</h2>
+                <p>We work together with open communication drawing on each others strengths.</p>
+              </div>
+
             </div>
 
-            <div class="careers__table">
-              <div class="careers__table__item">
-                <p class="careers__table__item__title" data-animation="paragraph">
-                  Deep commitment to the cultivation of each team member
-                </p>
+
+          </section>
+
+
+          <section class="background" style="padding-bottom: 0;">
+            <h3 class="background__title" data-animation="paragraph">
+              Benefits
+            </h3>
+
+
+            <div class="values-row values-row2 col-3">
+              <div class="value-item">
+                <h2>Rewards & Recognition
+                </h2>
+                <p>Enable career progression aspirations and recognition of efforts.</p>
               </div>
 
-              <div class="careers__table__item">
-                <p class="careers__table__item__title" data-animation="paragraph">
-                  Deep commitment to the cultivation of each team member
-                </p>
+              <div class="value-item">
+                <h2>Work-life & Wellbeing
+                </h2>
+                <p>Focussed on your health and wellbeing fostering a relaxed working environment and supportive of flexible work arrangements.</p>
               </div>
 
-              <div class="careers__table__item">
-                <p class="careers__table__item__title" data-animation="paragraph">
-                  Deep commitment to the cultivation of each team member
-                </p>
+
+              <div class="value-item">
+                <h2>Career & Training
+                </h2>
+                <p>Deeply committed to the cultivation of each team member and supporting careers. We subsidise training enabling continuous learning and development.</p>
               </div>
 
-              <div class="careers__table__item">
-                <p class="careers__table__item__title" data-animation="paragraph">
-                  Deep commitment to the cultivation of each team member
-                </p>
-              </div>
             </div>
+
+
           </section>
 
           <section class="team">
