--- a/contactus.html
+++ b/contactus.html
@@ -50,7 +50,7 @@
           <section class="contacts">
             <div class="contacts__info">
               <h1 class="contacts__info__title" data-animation="title">
-                Contact us
+                Get in Touch
               </h1>
 
               <p class="contacts__info__label" data-animation="paragraph">
@@ -79,7 +79,7 @@
                   <label data-animation="paragraph" for="organizationTxt" class="contacts__footer__form__label">Company/
                     Organization</label>
                   <br />
-                  <input type="text" id="organizationTxt" placeholder="Company/ Organization *"
+                  <input type="text" id="organizationTxt" placeholder="Company/ Organization"
                     class="contacts__footer__form__input" />
                 </div>
 
