--- a/aboutus.html
+++ b/aboutus.html
@@ -14,14 +14,14 @@
   <meta name="og:description" content="Five Eyes sovereign consultancy with 20 years experience in cyber security, have been deployed throughout Australia to
     combat, and provide novel solutions for the most challenging
     problems that clients encounter." />
-  <meta property="og:image" content="/assets/logo.png" />
+  <meta property="og:image" content="./assets/logo.png" />
 
-  <link rel="manifest" href="/assets/site.webmanifest" />
-  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
-  <link rel="icon" sizes="32x32" href="/assets/favicon-32x32.png" />
-  <link rel="icon" sizes="16x16" href="/assets/favicon-16x16.png" />
-  <link rel="mask-icon" href="/assets/favicon.ico" />
+  <link rel="manifest" href="./assets/site.webmanifest" />
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png" />
+  <link rel="icon" sizes="32x32" href="./assets/favicon-32x32.png" />
+  <link rel="icon" sizes="16x16" href="./assets/favicon-16x16.png" />
+  <link rel="mask-icon" href="./assets/favicon.ico" />
   <title>Five Eyes | About Us</title>
 
   <link rel="stylesheet" href="./css/index.css" />
@@ -34,7 +34,7 @@
     <div id="main-wrapper" class="main-wrapper" data-barba="container" data-barba-namespace="about">
       <div id="scrollable" class="scrollable">
         <nav class="navigation navigation--dark">
-          <a href="/">
+          <a href="./">
             <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
             <div class="navigation__links">
@@ -75,17 +75,17 @@
 
             <div class="values-row">
               <div class="value-item">
-                <h2>Our Purpose <img src="/assets/about_icon1.svg" alt="img"></h2>
+                <h2>Our Purpose <img src="./assets/about_icon1.svg" alt="img"></h2>
                 <p>Whether we are advising, delivering, or creating, our purpose is to help our communities solve their most complex information security challenges through our people, technology, and innovation.</p>
               </div>
 
               <div class="value-item">
-                <h2>Our Vision <img src="/assets/about_icon2.svg" alt="img"></h2>
+                <h2>Our Vision <img src="./assets/about_icon2.svg" alt="img"></h2>
                 <p>We aim to be the standard of excellence for Information Security and employer choice for security professionals.</p>
               </div>
 
               <div class="value-item">
-                <h2>Our Mission <img src="/assets/about_icon3.svg" alt="img"></h2>
+                <h2>Our Mission <img src="./assets/about_icon3.svg" alt="img"></h2>
                 <p>We create information security solutions that are secured by design and meet our clients desired outcomes.</p>
               </div>
             </div>
