--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@
     <div id="main-wrapper" class="main-wrapper" data-barba="container" data-barba-namespace="news">
       <div id="scrollable" class="scrollable">
         <nav class="navigation navigation--dark">
-          <a href="/">
+          <a href="./">
             <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
             <div class="navigation__links">
