--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id="main-wrapper" class="main-wrapper" data-barba="container" data-barba-namespace="home">
       <div id="scrollable" class="scrollable">
         <nav class="navigation">
-          <a href="/">
+          <a href="./">
             <img src="./assets/logo-white.png" alt="Five Eyes Logo" class="navigation__logo__dark" /></a>
 
           <div class="navigation__links">
