--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <meta name="og:description" content="Five Eyes sovereign consultancy with 20 years experience in cyber security, have been deployed throughout Australia to
     combat, and provide novel solutions for the most challenging
     problems that clients encounter." />
-  <meta property="og:image" content="assets/logo.png" />
+  <meta property="og:image" content="./assets/logo.png" />
 
-  <link rel="manifest" href="assets/site.webmanifest" />
-  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
-  <link rel="icon" sizes="32x32" href="assets/favicon-32x32.png" />
-  <link rel="icon" sizes="16x16" href="assets/favicon-16x16.png" />
-  <link rel="mask-icon" href="assets/favicon.ico" />
+  <link rel="manifest" href="./assets/site.webmanifest" />
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png" />
+  <link rel="icon" sizes="32x32" href="./assets/favicon-32x32.png" />
+  <link rel="icon" sizes="16x16" href="./assets/favicon-16x16.png" />
+  <link rel="mask-icon" href="./assets/favicon.ico" />
 
   <title>Five Eyes | Homepage</title>
 
@@ -31,7 +31,7 @@
 <body>
   <!-- <div class="preloader">
       <img
-        src="assets/mini-logo.png"
+        src="./assets/mini-logo.png"
         alt="Five Eyes Logo"
         class="preloader__logo"
       />
