--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
                    </div>
                 <div class="controls">
-                  <div class="control prev-slide">&#9668;</div>
-                  <div class="control next-slide">&#9658;</div>
+                  <div class="control prev-slide"><i class="fa-solid fa-chevron-left"></i></div>
+                  <div class="control next-slide"><i class="fa-solid fa-chevron-right"></i></div>
                 </div>
               </div>
 
@@ -164,7 +164,7 @@
                     to private and public sector organisations of all sizes.
                   <div data-animation="paragraph" class="services__grid__item__link">
                     <b>
-                      <a href="#.">Learn more about our capabilities</a>
+                      <a href="#.">Learn more</a>
                     </b>
                   </div>
                   </p>
@@ -185,7 +185,7 @@
                     maintenance of enterprise ICT systems across the whole project lifecycle.
                   <div data-animation="paragraph" class="services__grid__item__link">
                     <b>
-                      <a href="#.">Learn more about our capabilities</a>
+                      <a href="#.">Learn more</a>
                     </b>
                   </div>
                   </p>
@@ -208,7 +208,7 @@
                     experience managing and delivering enterprise solutions across the whole project lifecycle.
                   <div data-animation="paragraph" class="services__grid__item__link">
                     <b>
-                      <a href="#.">Learn more about our capabilities</a>
+                      <a href="#.">Learn more</a>
                     </b>
                   </div>
 
