--- a/aboutus.html
+++ b/aboutus.html
@@ -94,7 +94,7 @@
 
           <section class="background">
             <h3 class="background__title" data-animation="paragraph">
-              Our Values <img src="./assets/about_icon4.svg" alt="icon" style="width: 25px;">
+              <span>01.</span> Our Values <img src="./assets/about_icon4.svg" alt="icon" style="width: 25px;">
             </h3>
 
             <h3 class="background__label" data-animation="paragraph">
