--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <section class="home">
             <div class="home__wrapper">
 
-              <div class="owl-carousel owl-theme">
+              <div class="owl-carousel owl-theme" id="home_slider">
                 <!-- 1 -->
                 <div class="item">
                   <h1 class="home__title" data-animation="paragraph">
@@ -104,44 +104,6 @@
               </svg>
             </div>
           </section>
-
-          <script>
-            const delay = 5000; //ms
-
-            const slides = document.querySelector(".slides");
-            const slidesCount = slides.childElementCount;
-            const maxLeft = (slidesCount - 1) * 100 * -1;
-
-            let current = 0;
-
-            function changeSlide(next = true) {
-              if (next) {
-                current += current > maxLeft ? -100 : current * -1;
-              } else {
-                current = current < 0 ? current + 100 : maxLeft;
-              }
-
-              slides.style.left = current + "%";
-            }
-
-            let autoChange = setInterval(changeSlide, delay);
-            const restart = function () {
-              clearInterval(autoChange);
-              autoChange = setInterval(changeSlide, delay);
-            };
-
-            // Controls
-            document.querySelector(".next-slide").addEventListener("click", function () {
-              changeSlide();
-              restart();
-            });
-
-            document.querySelector(".prev-slide").addEventListener("click", function () {
-              changeSlide(false);
-              restart();
-            });
-
-          </script>
 
           <section class="services">
             <div class="services__title__wrapper">
@@ -409,7 +371,7 @@
 <script>
   $(function() {
   // Owl Carousel
-  var owl = $(".owl-carousel");
+  var owl = $("#home_slider");
   owl.owlCarousel({
     items: 1,
     margin: 10,
