--- a/careers.html
+++ b/careers.html
@@ -50,11 +50,11 @@
 
           <section class="careers">
             <div class="careers__info">
-              <h1 class="careers__info__title" data-animation="title">
+              <h1 class="careers__info__title background__title" data-animation="title">
                 Join Our Team
               </h1>
 
-              <p class="careers__info__label" data-animation="paragraph">
+              <p class="careers__info__label background__label" data-animation="paragraph">
                 Five Eyes Consulting was built on the pillars of community and culture. We have created an atmosphere where self development and innovation are encouraged and where the will to advance one’s career is met with reward and support.
               </p>
 
@@ -167,7 +167,7 @@
 
           <section class="background" style="padding-bottom: 0;">
             <h3 class="background__title" data-animation="paragraph">
-              Our Values <img src="./assets/about_icon4.svg" alt="icon" style="width: 25px;">
+              <span>01.</span> Our Values <img src="./assets/about_icon4.svg" alt="icon" style="width: 25px;">
             </h3>
 
             <h3 class="background__label" data-animation="paragraph">
@@ -209,7 +209,7 @@
 
           <section class="background" style="padding-bottom: 0;">
             <h3 class="background__title" data-animation="paragraph">
-              Benefits
+              <span>02.</span> Benefits
             </h3>
 
 
@@ -240,11 +240,11 @@
 
           <section class="team">
             <div class="team__info">
-              <h1 class="team__info__title" data-animation="title">
+              <h1 class="team__info__title background__title" data-animation="title">
                 Join our team
               </h1>
 
-              <p class="team__info__label" data-animation="paragraph">
+              <p class="team__info__label background__label" data-animation="paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod tempor incididunt ut labore.
               </p>
