--- a/service.html
+++ b/service.html
@@ -66,7 +66,7 @@
                 ISO9001 & ISO37000).
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                WWhat is Cyber Security Advisory?
+                What is Cyber Security Advisory?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
@@ -93,6 +93,9 @@
                 <p class="footer__label" data-animation="paragraph">
                   Campbell, ACT 2612
                 </p>
+                <div class="mt-5"></div>
+                <a href="mailto:enquiries@fiveeyes.com.au" class="footer__label"
+                  data-animation="paragraph">enquiries@fiveeyes.com.au</a>
               </div>
 
               <div class="footer__socials">
@@ -100,7 +103,25 @@
                   Social Media
                 </p>
 
-                <a href="#" class="footer__label" data-animation="paragraph">LinkedIn</a>
+
+
+                <div data-animation="paragraph">
+                  <a href="https://facebook.com/" target="_blank" class="footer__label">
+                    <i class="fa-brands fa-facebook-square"></i>
+                  </a>
+
+                  <a href="https://linkedin.com/" target="_blank" class="footer__label">
+                    <i class="fa-brands fa-linkedin"></i>
+                  </a>
+                </div>
+
+              </div>
+
+              <div class="footer__email">
+                <p class="footer__title" data-animation="paragraph">Email</p>
+
+                <a href="mailto:enquiries@fiveeyes.com.au" class="footer__label"
+                  data-animation="paragraph">enquiries@fiveeyes.com.au</a>
               </div>
 
               <div class="footer__partners">
@@ -113,22 +134,11 @@
                     crossorigin="anonymous" />
                   <img class="footer__images__grid__image" src="./assets/microsoft.png" alt="Cisco"
                     crossorigin="anonymous" />
-                  <img class="footer__images__grid__image" src="./assets/aws.png" alt="Cisco" crossorigin="anonymous" />
-                </div>
-              </div>
-
-              <div class="footer__sponsors">
-                <p class="footer__title" data-animation="paragraph">
-                  Sponsors
-                </p>
-
-                <div class="footer__images__grid">
-                  <img class="footer__images__grid__image" src="./assets/solderOn.png" alt="Cisco"
-                    crossorigin="anonymous" />
-                  <img class="footer__images__grid__image" src="./assets/npca.png" alt="Cisco"
+                  <img class="footer__images__grid__image" src="./assets/amazon.png" alt="Cisco"
                     crossorigin="anonymous" />
                 </div>
               </div>
+
             </div>
           </footer>
         </div>
