--- a/aboutus.html
+++ b/aboutus.html
@@ -50,7 +50,17 @@
           <section class="about">
 
 
-            <div>
+            <h1 class="about__title" data-animation="paragraph">
+              <div>a leading Australian-</div>
+              <div>based sovereign</div>
+              <div>consultancy</div>
+              <div>
+                <span>for cyber security</span>
+              </div>
+            </h1>
+
+
+            <!-- <div>
               <h1 class="about__title" data-animation="paragraph">
                 About Us
               </h1>
@@ -68,7 +78,7 @@
                 response to changing environments and threats.
               </p>
 
-            </div>
+            </div> -->
 
             <svg class="about__arrow" viewBox="0 0 16 35" xmlns="http://www.w3.org/2000/svg">
               <path
